2004-07-05  Carl Hetherington <inkscape@carlh.net>

	* src/desktop.cpp: prevent crash by adding a check for 
	layer == NULL to SPDesktopWidget::_buildLayerStatusMenuItem.

	* src/selection-chemistry.cpp: prevent crash on copying empty
	groups.

2004-07-04  MenTaLguY  <mental@rydia.net>

	* src/sp-object.cpp: fixed bug #979281 -- I had accidentally
	  reversed the sense of a test in SPObject::requestModified(),
	  such that CHILD_MODIFIED notifications were never being sent

	* src/widgets/sp-color-notebook.cpp: always assume colors are
	  8-digit hex rrggbbaa, and zero-fill accordingly

	  HAPPY NATHAN#@$?#$#@$!?!?!?

	* src/desktop.cpp, src/desktop.h, src/document.cpp, src/document.h,
	  src/interface.cpp, src/select-context.cpp, src/selection-chemistry.cpp,
	  src/sp-item-group.cpp, src/sp-item-group.h, src/widgets/widget-sizes.h:

	  Added selection-changes-current-layer and other layer refinements.
	  Except for fixing the currently broken layer combo box on the status
	  bar, I think this is pretty much the last of the layerish work I'm
	  willing to do for 0.39 since we're in freeze now.

2004-07-03  Kees Cook  <kees@outflux.net>

	* src/document.cpp, src/dialogs/desktop-properties.cpp, 
	  src/dialogs/rdf.cpp, src/dialogs/rdf.h:
	  Added several more RDF entities.  Created entry tooltips.  Set
	  a few RDF defaults for the document.

2004-07-03  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp, src/document.cpp: 

	  siblings of a layer now become layers too

	* src/interface.cpp: switched to command names suggested by bulia

	* src/object-hierarchy.cpp, src/object-hierarchy.h:

	  bugfixes and cleanups
	
	* src/sp-item-group.cpp, src/sp-item-group.h, src/sp-root.cpp:

	  new layerMode() and setLayerMode() methods; SPGroupMode becomes
	  SPGroup::LayerMode

	* src/sp-object.h: added isSiblingOf() method

	* src/sp-object.cpp: leave parent pointer in place until after
	  "release" handlers finish

2004-07-02  Kees Cook  <kees@outflux.net>
